--- a/index.html
+++ b/index.html
@@ -13,17 +13,22 @@
   <script src="https://unpkg.com/gojs/release/go-debug.js"></script>
   <!-- <script src="../assets/js/goSamples.js"></script>  this is only for the GoJS Samples framework -->
   <script src="./firebase-config.js"></script>
-  <script src="./gojsscript.js">  </script>
+  <script src="./metadatascript.js">  </script>
 </head>
 <body onload="init()">
 <div id="sample">
+  <button type="button" onclick="addTable()">Add Table</button>
+  <button type="button" onclick="resetDiagram()">Reset Diaram</button>
   <div id="myDiagramDiv" style="border: solid 1px black; width:100%; height:300px"></div>
-  <h3>Firebase Real Time data Transfer between tables Users1 and Users2 can be seen on logs in console </h3>
-  <p>Drag user names between User tables to move them; dragging within the same node can reorder them.
-     Users can be copied when holding down the control key; they are deleted when dropped in the diagram's background.
-     The "users" Nodes are not movable or copyable or deletable.</p>
-  <p>The model data, automatically updated after each change or undo or redo:</p>
-  <textarea id="mySavedModel" style="width:100%;height:300px"></textarea>
+  <p>
+    <h4>Click on ADD TABLE button to add tables or RESET DIAGRAM button to reset the canvas. 
+    <br>Double click to edit table names, field names, field descriptions are editable.</h4>
+  </p>
+ 
+  <div>
+    <h3>Real time data from Firebase database , automatically updated after each change or undo or redo:</h3>
+    <textarea id="mySavedModel" style="width:100%;height:250px"></textarea>
+  </div>
 </div>
 </body>
 </html>
