Edit Page contents

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <button type="button" onclick="resetDiagram()">Reset Diaram</button>
   <div id="myDiagramDiv" style="border: solid 1px black; width:100%; height:300px"></div>
   <p>
-    <h4>Click on ADD TABLE button to add tables or RESET DIAGRAM button to reset the canvas. 
-    <br>Double click to edit table names, field names, field descriptions are editable.</h4>
+    <h5>Click on ADD TABLE button to add tables or RESET DIAGRAM button to reset the canvas. 
+    <br>Double click to edit table names, field names, field descriptions.</h5>
   </p>
  
   <div>
